# MemAllocator

./: .clang-format  CMakeLists.txt  main.c
Mem/: allocator.c  allocator.h  defragger.c  defragger.h  globaldef.h  linkedList.c  linkedList.h
Test/: tests.c
